contents z-index issue.

--- a/CSS/CT.css
+++ b/CSS/CT.css
@@ -119,5 +119,5 @@ div.subMenu {
 #paletteDisplay { overflow-wrap:break-word; padding-left: 5px; padding-right: 5px;}
 #paletteDisplay span {font-family: Square; text-align: center; border: 1px solid #ccc;cursor:pointer;}
 .selected {border: 1px solid #000!important}
-.journalContents {border: 1px solid #CCC; background-color: #EEE; top: 5px; float: right; position: sticky; text-align: center; display: block;}
+.journalContents {border: 1px solid #CCC; background-color: #EEE; top: 5px; float: right; position: sticky; text-align: center; display: block; z-index: 1;}
 #OCEffectList {max-height: 3em;}
